force-app/main/default/objects/Course_registration__c/Course_registration__c.object-meta.xml
<CustomObject>
    <label>Course registration</label>
    <nameField>
        <displayFormat>CRN-{000000}</displayFormat>
        <label>Course registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>