force-app/main/default/objects/Course_registration__c/fields/Course_Detail__c.field-meta.xml
<CustomField>
    <fullName>Course_Detail__c</fullName>
    <label>Course Detail</label>
    <referenceTo>Course_Details__c</referenceTo>
    <relationshipLabel>Course registrations</relationshipLabel>
    <relationshipName>Course_registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>