force-app/main/default/objects/Course_registration__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>