force-app/main/default/objects/Course_registration__c/fields/Present_Address__c.field-meta.xml
<CustomField>
    <fullName>Present_Address__c</fullName>
    <label>Present Address</label>
    <type>TextArea</type>
</CustomField>