force-app/main/default/objects/Course_registration__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>