force-app/main/default/objects/Course_registration__c/recordTypes/Student_Registration.recordType-meta.xml
<RecordType>
    <fullName>Student_Registration</fullName>
    <active>true</active>
    <label>Student Registration</label>
</RecordType>