force-app/main/default/objects/Course_registration__c/recordTypes/Trainee_Registration.recordType-meta.xml
<RecordType>
    <fullName>Trainee_Registration</fullName>
    <active>true</active>
    <label>Trainee Registration</label>
</RecordType>